log/build_2025-10-18_19-36-02/openrb_assignment/stderr.log
  File "/home/javid/ros2ws/ros2ws/install/openrb_assignment/lib/python3.10/site-packages/openrb_assignment/servo_subscriber.py", line 7
    import .dynamixel_registers
           ^
SyntaxError: invalid syntax

